# gatehold

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.openai/: hosting.json
app/: GateholdDashboard.tsx  globals.css  layout.tsx  page.tsx
docs/: ARCHITECTURE.md  BRAND-ASSET.md  COMPETITION-CHECKLIST.md  DEMO-SCRIPT.md  JUDGE-QUICKSTART.md  PRIVACY.md  PRODUCT-CONTRACT.md  SUBMISSION.md  TESTING.md  THREAT-MODEL.md
fixtures/demo/: gatehold-replay.json
media/: README.md  shot-manifest.json
media/output/: gatehold-build-week-demo.en.srt
media/review/: checksums.sha256  qa-report.json
scripts/: check-doc-links.mjs  check-privacy.mjs  clean-build.mjs  install-local.sh  live-model-smoke.mjs  uninstall-local.sh
scripts/video/: build-demo.sh  generate-tts.mjs  qa-demo.sh  render-cards.mjs
skills/gatehold/: SKILL.md
skills/gatehold/agents/: openai.yaml
src/gatehold/: __init__.py  __main__.py  admission.py  api.py  cli.py  config.py  conflicts.py  host.py  lifecycle.py  models.py  privacy.py  resources.py  security.py  semantic.py  store.py  supervisor.py
tests/core/: conftest.py  helpers.py  test_api_and_security.py  test_cli.py  test_concurrency_hardening.py  test_conflicts_and_models.py  test_host.py  test_install_local.py  test_lifecycle_cleanup.py  test_privacy.py  test_resources.py  test_semantic.py  test_store_and_admission.py  test_supervisor.py
tests/web/: rendered-html.test.mjs
worker/: index.ts
