[project]
name = "gatehold"
version = "0.1.0"
description = "Local clearance control for parallel AI coding agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Evl Labs" }]
keywords = [
  "ai-agents",
  "codex",
  "developer-tools",
  "resource-governor",
  "workstation",
]
dependencies = [
  "fastapi>=0.128,<1",
  "openai>=2.24,<3",
  "psutil>=7.2,<8",
  "pydantic>=2.12,<3",
  "uvicorn>=0.40,<1",
]

[project.scripts]
gatehold = "gatehold.cli:main"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pyright>=1.1.408,<2",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.14,<1",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gatehold"]

[tool.pytest.ini_options]
testpaths = ["tests/core"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".vinext", ".wrangler", "dist", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests/core"]
exclude = [".venv", "node_modules", ".vinext", "dist"]
typeCheckingMode = "strict"
